# rosbot

./: .gitignore  README.md
launch/: base.py  rpi4.py
src/imu/: CMakeLists.txt  package.xml
src/imu/src/: publisher.cpp  service.cpp
src/ldlidar_component/component/include/: ldlidar_component.hpp
src/ldlidar_component/component/src/: ldlidar_component.cpp
src/ldlidar_component/driver/include/: lipkg.hpp
src/ldlidar_component/driver/src/: lipkg.cpp  lipkg.cpp.orig
src/ldlidar_node/config/: ldlidar.yaml  lifecycle_mgr.yaml
src/ldlidar_node/launch/: ldlidar.launch.py  ldlidar_with_mgr.launch.py
src/ldlidar_node/rviz2/: ldlidar.rviz
src/ldlidar_node/urdf/: ldlidar_descr.urdf.xml
src/motor/: CMakeLists.txt  package.xml
src/motor/include/motor/: config.h  encoder.h  kinematics.h  motor.h  odometry.h  pid.h
src/motor/src/: encoder.cpp  kinematics.cpp  main.cpp  motor.cpp  odometry.cpp  pid.cpp
src/photo/: package.xml  setup.cfg  setup.py
src/photo/photo/: capture.py
src/wave_bot_description/: CMakeLists.txt  package.xml
src/wave_bot_description/config/: ekf.yaml  slam.yaml
src/wave_bot_description/launch/: display.launch.py
src/wave_bot_description/src/description/: wave_bot_description.urdf
src/yolo/: package.xml  setup.py
src/yolo/yolo/: service.py
